--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A knex tool that allows you to populate foreign keys from a database.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha lib/**/**.spec.js"
+    "test": "jest --watch --coverage --verbose"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,10 @@
     "url": "https://github.com/johnazre/knex-populate/issues"
   },
   "homepage": "https://github.com/johnazre/knex-populate#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^29.6.2"
+  },
+  "dependencies": {
+    "knex": "^2.5.1"
+  }
 }
